test/Harper/Tests/Good/DefiniteAssignemnt_IfElse.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  var (result :: Integer) = 0;
  
  if (n == 42) {
    x := n;
  
    // x is definitely assigned here.
  
    result += x;
  }
  else {
    x := 0;

    // x is definitely assigned here.

    result += x;
  }

  // x is definitely assigned here.

  result += x + n;
  return result;
};

main :: Integer;
main = f 42;