test/Harper/Tests/Bad/DefiniteAssignment_If.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  var (result :: Integer) = 0;

  if (n == 42) {
    x := n;
  
    // x is definitely assigned.
  
    result += x;
  }
  
  // x is not definitely assigned.

  result += x + n;
  return result;
};

main :: Integer;
main = f 42;